# SatSolver

./: .gitignore  CMakeLists.txt  README.md
include/: DPLLSolver.h  Solver.h
src/: DPLLSolver.cpp  Solver.cpp
